css/style.css
/* 
    BACKGROUND & STRUCTURE
*/
*{
    user-select: none;
}

.bgGreenGray{
    height: 100vh;
    background: rgb(0,150,136);
    background: linear-gradient(180deg, rgba(0,150,136,1) 20%, rgba(218,219,211,1) 20%);
}

.windowContainer{
    height: 95%;
    width: 70%;
    background-color: white;
}

.windowContainer>div{
    padding: 0;
}

/* 
    APP SECTION
*/

/*  APP HEADER */
.appHeader{
    height: 220px;
}

.appBody{
    height: 75%;
    overflow: auto;
}

.appUser{
    height: 70px;
    padding: 5px;
    background-color: #EAEAEA;
}

.userImage{
    overflow: hidden;
    border-radius: 50%;
    height: 60px;
    width: 60px;
}

.userImage>img{
    width: 100%;
}

.userName{
    margin-left: 10px;
    font-weight: 600;
    line-height: 60px;
}

.appIcons{
    line-height: 60px;
    color: #B1B1B1;
    font-size: 1.2rem;
    padding-right: 10px;
}
.appIcons>span{
    padding: 0 10px;
}

.appNotify{
    background-color: #8EDAFC;
    height: 100px;
    padding: 0 10px;
}

.notifyIcon{
    height: 50px;
    width: 50px;
    border-radius: 50%;
    overflow: hidden;
    color:#8EDAFC;
    background-color: white;
    text-align: center;
    line-height: 50px;
    font-size: 1.8rem;
    margin-right: 10px;
}

.notifyText>h3{
    font-size: 0.8rem;
    font-weight: 700;
    margin: 0;
}

.notifyText>a{
    font-size: 0.7rem;
    color:#56879C;
}

.appSearch{
    height: 50px;
    background-color: #FAFAFA;
    padding: 10px;
}

.appSearch>div>*{
    height: 100%;
    color: #B1B1B1;
}

.searchIcon{
    font-size: 1rem;
    width: 50px;
    background-color: white;
    text-align: center;
    line-height: 25px;
    border: 1px solid lightgray;
    margin-right: 1px;
}

.searchBar{
    width: 100%;
}

.searchBar>input{
    width: 100%;
    padding-left: 10px;
    font-size-adjust: 0.5rem;
    border: 1px solid lightgray;
}

.searchBar>input:focus{
    outline: none;
}

/* APP BODY */

.activeUser{
    background-color: #f3f5f5;
}
.singleMsg{
    height: 80px;
    padding: 5px;
    border-top: 1px solid #C6C8CA;
    cursor: pointer;
    overflow:hidden;
}

.msgImage{
    overflow: hidden;
    border-radius: 50%;
    height: 70px;
    min-width: 70px;
    max-width: 70px;
    margin-right: 10px;
}

.msgImage>img{
    width: 100%;
}

.msgData{
    margin-top: 5px;
    overflow: hidden;
}
.msgData>h3{
    font-size: 1.2rem;
    margin-bottom: 10px;
}

.msgData>h4{
    font-size: 0.8rem;
    margin: 0;
    color: #727274;  
}

.msgData>.waGreen{
    color: #1EA952;
}

.msgTime{
    color: #C6C8CA;
    padding-right: 10px;
    font-size: 0.9rem;
}

.bubbleDropdown{
    display: none;
    position: absolute;
    right: 0;
    top: 5px;
}
.bubbleButton{
    background-color: transparent;
    border: 0px;
    display: inline;
    font-size: 0.9rem;
    color: #727274;
}

.msgBubble:hover .bubbleDropdown{
    display: block;
}

.bubbleDropdown  .bubbleDelete{
    border: 1px solid #d0d0d3;
    border-radius: 0;
    font-size: 0.9rem;
    height: 50px;
    padding: 10px 0;
    cursor: pointer;
}

.bubbleDropdown  .bubbleDelete a:active{
    background-color: lightgray;
    color: black;
}

.notification{
    position: absolute;
    right: 20px;
    top: 30px;
    text-align: center;
}

.notification>div{
    background-color: #1EA952;
    color: white;
    border-radius: 50%;
    width: 20px;
    height: 20px;
    line-height: 20px;
}

/* 
    MSG SECTION
*/

.leftBorder{
    border-left: 1px solid #C6C8CA;
    height: 100%;
}

/* MSG HEADER */
.msgHeader{
    height: 70px;
    padding: 5px;
    background-color: #EAEAEA;
}

/* MSG BODY */
.msgBody{
    overflow: auto;
    height: calc(100% - 140px);
    background-image: url(../img/mine.jpg);
}

.msgBox{
    width: 70%;
    height: 90%;
}

.msgBubble{ 
    background-color: white;
    width: 230px;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 10px;
    word-wrap: break-word
}

.received{
    background-color: white;
    align-self: flex-start;
}

.sent{
    background-color: #D5F9BA;
    align-self: flex-end;
}

.bubbleText{
    display: inline-block;
    user-select: text;
    font-size: 0.9rem;
    width: 90%;
}

.bubbleTime{
    font-size: 0.6rem;
    position: absolute;
    right: 3px;
    bottom: 3px;
    color: #97979e;
}

/* MSG FOOTER */
.msgFooter{
    height: 70px;
}

.footerIcon{
    padding: 20px;
    font-size: 1.5rem;
}

.msgFooter>.appSearch{
    background-color: #F3EEEA;
    height: 100%;
}

.msgFooter>.appSearch input{
    height: 50px;
    border-radius: 15px;
    border: 0px;
    color: black;
}

